# cloudflare-controller-rs

./: Cargo.toml  README.md  credentials_crd.yaml  ingress.yaml  ingress_class.yaml  ingress_class_2.yaml  tunnel_ingress_crd.yaml  tunnels_crd.yaml
crates/cloudflarext/: Cargo.toml
crates/cloudflarext/src/: cfd_tunnel.rs  lib.rs
crates/crdgen/: Cargo.toml
crates/ingress-controller/: Cargo.toml
crates/ingress-controller/src/: controller.rs  lib.rs
crates/tunnel-controller/: Cargo.toml
crates/tunnel-controller/src/: lib.rs
crates/tunnel-controller/src/crd/: credentials.rs  tunnel.rs
src/: cftunnel.rs  crdgen.rs  main.rs
src/cloudflare/: auth.rs  mod.rs  tunnel.rs
src/controller/: mod.rs  tunnel.rs
src/controller/ingress/: mod.rs
src/controllers/: mod.rs  tunnel.rs
src/controllers/ingress/: mod.rs
src/crd/: credentials.rs  mod.rs  tunnel.rs  tunnel_configuration.rs
src/crd/tunnel/: mod.rs
src/operator/: controller.rs  mod.rs  tunnel_controller.rs  tunnel_ingress_controller.rs
src/operator/crd/: tunnel.rs
src/operator/resources/: deployment.rs  mod.rs  secret.rs
src/resources/: deployment.rs  mod.rs  secret.rs
tests/: credentials_crd_test.yaml  tunnel_test.yaml
